--- a/doc/commons.tex
+++ b/doc/commons.tex
@@ -250,6 +250,7 @@
 \newcommand{\ocaml}{OCaml}
 \newcommand{\pat}{PAT}
 \newcommand{\phaver}{PHAVer}
+\newcommand{\phaverLite}{PHAVerLite}
 % \newcommand{\polka}{NewPolka}
 % \newcommand{\prism}{\textsc{Prism}}
 % \newcommand{\red}{RED}
@@ -445,7 +446,7 @@
 
 \lstdefinelanguage{Imitator}{
 	morekeywords={
-		and, automaton, clock, constant, discrete, do, end, endreach, False, forward, from, goto, if, in, init, initially, loc, locations, not, or, parameter, print, property, reach, region, unreachable, urgent, sync, synclabs, True, var, wait, when, while
+		and, automaton, clock, constant, discrete, do, end, endreach, False, forward, from, goto, if, in, init, initially, invariant, loc, locations, not, or, parameter, print, property, reach, region, unreachable, urgent, sync, synclabs, True, var, wait, when, while
 	},
 	sensitive=false,
 % 	morecomment=[l][\color{gray}]{--},
