Preliminary works to add types to discrete variables

--- a/doc/IMITATOR-user-manual.tex
+++ b/doc/IMITATOR-user-manual.tex
@@ -2676,7 +2676,6 @@ The following words are reserved keywords and cannot be used as names for automa
 \styleIMI{carto},
 \styleIMI{clock},
 \styleIMI{constant},
-\styleIMI{discrete},
 \styleIMI{do},
 \styleIMI{else},
 \styleIMI{end},
@@ -2702,6 +2701,7 @@ The following words are reserved keywords and cannot be used as names for automa
 \styleIMI{parameter},
 \styleIMI{projectresult},
 \styleIMI{property},
+\styleIMI{rational},
 \styleIMI{region},
 \styleIMI{sequence},
 \styleIMI{special\_0\_clock},
