--- a/doc/commons.tex
+++ b/doc/commons.tex
@@ -374,7 +374,7 @@
 \definecolor{filecontentcolor}{rgb}{.1, .4, .2}
 \newcommand{\styleFileContent}[1]{\textcolor{filecontentcolor}{\texttt{#1}}}
 
-\newcommand{\GitHubIMI}{GitHub} % TODO : URL
+\newcommand{\GitHubIMI}{\href{https://github.com/imitator-model-checker/imitator}{GitHub}}
 
 \newcommand{\styleCommand}[1]{
 	\medskip
