Change to version 3

--- a/doc/commons.tex
+++ b/doc/commons.tex
@@ -262,8 +262,8 @@
 
 
 % Current version
-\newcommand{\imitatorversion}{2.12}
-\newcommand{\imitatorversionname}{Butter Lobster}
+\newcommand{\imitatorversion}{3}
+\newcommand{\imitatorversionname}{Cheese}
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
