updated the user manual

--- a/doc/commons.tex
+++ b/doc/commons.tex
@@ -303,7 +303,7 @@
 	{\end{myhint}\end{mdframed}}
 
 \newtheorem{mywarning}{Warning} %[chapter]
-\newenvironment{warning}
+\renewenvironment{warning}
 	{\begin{mdframed}[roundcorner=3pt,backgroundcolor=red!20,linecolor=red!50!black,linewidth=2]\begin{mywarning}}
 	{\end{mywarning}\end{mdframed}}
 
