Fixed slight error in the CFG in the documentation
The manual says that `wait` and `do` keywords are followed by parenthesis when this is not accepted by IMITATOR or used in any files on the website.

The [NuclearPlant.imi](https://www.imitator.fr/models/NuclearPlant.imi) also does not follow the property definition with a semicolon, which this grammar requires, but as the semicolon is used in all other examples and IMITATOR does parse it both with and without, i'm assuming that the optional semicolon is just allowed for backwards compatibility?

--- a/doc/IMITATOR-user-manual.tex
+++ b/doc/IMITATOR-user-manual.tex
@@ -2123,7 +2123,7 @@ We define each of those two components below.
 \regleGrammaire{\npec{wait\_opt}}
 %------------------------------------------------------------
 \begin{tabular}{l l}
-	\ & \npec{\styleIMI{wait()}} \\
+	\ & \npec{\styleIMI{wait\{\}}} \\
 	$|$ & \npec{\styleIMI{wait}} \\
 	$|$ & \npec{\emptystring} \\
 \end{tabular}
@@ -2167,7 +2167,7 @@ We define each of those two components below.
 \regleGrammaire{updates}
 %------------------------------------------------------------
 \begin{tabular}{l l}
-	\  & \styleIMI{do} \styleIMI{(} \nt{update\_list} \styleIMI{)} \\
+	\  & \styleIMI{do} \styleIMI{\{} \nt{update\_list} \styleIMI{\}} \\
 \end{tabular}
 
 %------------------------------------------------------------
